--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -215,3 +215,69 @@ $tab-count: {{ site.tabs | size | plus: 1 }}; // plus 1 for home tab
 .highlight .il {
   color: #f99157 !important;
 } /* Literal.Number.Integer.Long */
+
+#sidebar{
+  border-right: 1px solid rgba(0,0,0,0.07);
+  background: #ffffff;
+}
+
+.post-content a:not(.img-link):hover{
+  transition-property: all;
+  transition-timing-function: ease;
+  transition-duration: 0.3s;
+}
+
+body{
+  font-family: "PT Sans",sans-serif;
+}
+
+.post h1 {
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+  font-size: 2.5rem;
+  border-bottom: 1px solid #ededed;
+}
+
+.post-content{
+  font-size: 0.92rem;
+}
+
+#post-wrapper h2{
+  font-size: 1.9rem;
+  font-weight: 500;
+}
+#post-wrapper h3{
+  font-size: 1.49rem;
+}
+#post-wrapper h4{
+  font-size: 1.12rem;
+}
+
+
+
+.post em{
+  font-size: 0.85rem;
+}
+
+blockquote {
+  border-left: 3.2px solid #848484;
+  padding-left: 1rem;
+  color: #000000;
+}
+
+#post-list .post-preview a:hover{
+  transition-property: all;
+  transition-timing-function: ease;
+  transition-duration: 0.2s;
+}
+
+#post-list .post-preview h1{
+  border-bottom: none;
+}
+
+
+@media all and (max-width: 576px)  {
+  #post-wrapper h1{
+    font-size: 2.5rem;
+  }
+}
