--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -290,3 +290,10 @@ blockquote {
 .end-line{
   margin-top: 6rem;
 }
+
+.post-tail-wrapper{
+  margin-top: 3rem;
+}
+.pt-5 {
+  padding-top: 0rem!important;
+}
