--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -262,7 +262,7 @@ hr {
 blockquote {
   border-left: 3.2px solid #848484;
   padding-left: 1rem;
-  color: #000000;
+  //color: #000000;
 }
 
 #post-list .post-preview a:hover {
